force-app/main/default/objects/Hotel__c/fields/customer_Name__c.field-meta.xml
<CustomField>
    <fullName>customer_Name__c</fullName>
    <label>customer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>