force-app/main/default/objects/Hotel__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <description>10- Digit Phone Number</description>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>