force-app/main/default/objects/Hotel__c/fields/Hotel_Code__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Code__c</fullName>
    <label>Hotel Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>